src/main/java/com/example/NYA_reservation/controller/error/RecordNotFoundException.java
package com.example.NYA_reservation.controller.error;

public class RecordNotFoundException extends RuntimeException {
    public RecordNotFoundException(String message) {
        super(message);
    }
}
